update Ten thanh vien

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                 <div class="team-grid">
                     <div class="member-card">
                         <div class="member-avatar">A</div>
-                        <h3>huỳnh tiến duy</h3>
+                        <h3>Huỳnh Tiến Duy</h3>
                         <p class="role">Team Leader</p>
                         <div class="skills">
                             <span class="skill-tag">Leadership</span>
@@ -427,7 +427,7 @@
                     </div>
                     <div class="member-card">
                         <div class="member-avatar">B</div>
-                        <h3>nguyễn nam thắng</h3>
+                        <h3>Nguyễn Nam Thắng</h3>
                         <p class="role">Frontend Developer</p>
                         <div class="skills">
                             <span class="skill-tag">HTML/CSS</span>
@@ -437,7 +437,7 @@
                     </div>
                     <div class="member-card">
                         <div class="member-avatar">C</div>
-                        <h3>đinh văn thành</h3>
+                        <h3>Đinh Văn Thành</h3>
                         <p class="role">Backend Developer</p>
                         <div class="skills">
                             <span class="skill-tag">Node.js</span>
@@ -447,7 +447,7 @@
                     </div>
                     <div class="member-card">
                         <div class="member-avatar">D</div>
-                        <h3>nguyễn văn lịnh</h3>
+                        <h3>Nguyễn Văn Lịnh</h3>
                         <p class="role">UI/UX Designer</p>
                         <div class="skills">
                             <span class="skill-tag">Figma</span>
@@ -457,7 +457,7 @@
                     </div>
                     <div class="member-card">
                         <div class="member-avatar">E</div>
-                        <h3>thái tân</h3>
+                        <h3>Thái Tân</h3>
                         <p class="role">QA Tester</p>
                         <div class="skills">
                             <span class="skill-tag">Testing</span>
